# SiboarkaECS

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: ImGui.cmake  Raylib.cmake
docs/: 01-scene-system.md  02-sprite-rendering.md
engine/: CMakeLists.txt
engine/include/ecs/: EventBus.h  Logger.h  Scene.h  SceneManager.h  System.h  Types.h  World.h
engine/include/ecs/components/: ColliderComponent.h  ControllableComponent.h  GravityComponent.h  GroundedComponent.h  ProjectileComponent.h  StaticComponent.h  TagComponent.h  TransformComponent.h
engine/include/ecs/events/: CollisionDirection.h
engine/include/ecs/systems/: CollisionEventSystem.h  CollisionSystem.cpp  CollisionSystem.h  GravitySystem.h  MovementSystem.h  PhysicsResponseSystem.h
engine/src/: World.cpp
game/: CMakeLists.txt
game/src/: InputState.h  main.cpp
game/src/components/: BaseComponent.h  BulletComponent.h  DeadComponent.h  EnemyComponent.h  HealthComponent.h  LifetimeComponent.h  RenderComponent.h  SpriteComponent.h  TargetComponent.h  TowerComponent.h
game/src/components/VFX/: LaserComponent.h
game/src/events/: DeathEvent.h  PlaceTowerRequestEvent.cpp  PlaceTowerRequestEvent.h  RemoveTowerRequestEvent.cpp  RemoveTowerRequestEvent.h  ShotFiredEvent.h  TowerPlacedEvent.h
game/src/scenes/: TestScene.cpp  TestScene.h
game/src/systems/: CollisionSystem.cpp  CollisionSystem.h  DamageSystem.cpp  DamageSystem.h  DeathSystem.cpp  DeathSystem.h  InputSystem.cpp  InputSystem.h  PathFollowingSystem.cpp  PathFollowingSystem.h  PlacementSystem.cpp  PlacementSystem.h  RenderSystem.h  ShootingSystem.cpp  ShootingSystem.h  VFXSystem.cpp  VFXSystem.h  WaveSpawnerSystem.cpp  WaveSpawnerSystem.h
